feat: add match scale endpoint
